--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dynamicFeatures = [':dynamicfeature1', ':dynamicfeature2', ':dynamicfeature3', ':dynamicfeature4']
 }
 
 dependencies {
+    implementation project(":javaLib")
+    implementation project(":android-library")
+    implementation project(":kotlin-library")
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
